<resources>

    <string name="app_name">找牛股</string>
    <string name="app_number_default">--</string>
    <string name="yes">是的</string>
    <string name="no">不要</string>
    <string name="pressAgainExit">再按一次退出</string>

    <string name="concern_stock_fail">添加失败</string>
    <string name="concern_stock_success">添加成功</string>
    <string name="concern_stock_no">暂未关注股票</string>

    <string name="delete_confirm">确认删除该股票？</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_open">开启</string>

    <string name="login_register">注册</string>
    <string name="login_login">登录</string>


    <string name="net_error">网络异常</string>

    <string name="operation_fail">操作失败</string>

    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="person_ask">我的问股</string>
    <string name="person_coupon">优惠券</string>
    <string name="person_feedback">意见反馈</string>
    <string name="person_gold">金币</string>
    <string name="person_help">使用帮助</string>
    <string name="person_integral">积分</string>
    <string name="person_live">收藏直播室</string>
    <string name="person_nick">用户名/昵称</string>
    <string name="person_night">夜间模式</string>
    <string name="person_notification">牛仔通知</string>
    <string name="person_setting">系统设置</string>
    <string name="person_treasure">我的百宝箱</string>

    <string name="refresh">刷新</string>
    <string name="edit">编辑</string>

    <string name="search">搜索</string>
    <string name="search_no_result">搜索不到结果</string>
    <string name="search_result">搜索结果</string>

    <string name="tab_find">发现</string>
    <string name="tab_index">首页</string>
    <string name="tab_live">直播</string>

    <string name="tab_stock">自选</string>
    <string name="tab_stock_name">名称</string>
    <string name="tab_stock_price">价格</string>
    <string name="tab_stock_applies">涨跌幅</string>

    <string name="tab_treasure">宝箱</string>

    <string-array name="page_titles">
        <item>最新</item>
        <item>科技</item>
        <item>新闻</item>
        <item>家居</item>
        <item>汽车</item>
        <item>军事</item>
    </string-array>
    <string name="tab_title_1">最新</string>
    <string name="tab_title_2">科技</string>
    <string name="tab_title_3">新闻</string>
    <string name="tab_title_4">家居</string>
    <string name="tab_title_5">汽车</string>
    <string name="tab_title_6">军事</string>

    <string name="username">Username</string>
    <string name="title_activity_text_input">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
